<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:text="@string/length"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/editTextLength"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" android:maxLength="3" android:text="12">

                    <requestFocus />
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/editTextQuantity"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" android:maxLength="3" android:text="5"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:orientation="vertical" >
            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBoxLetters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letters" android:checked="true" android:onClick="checkBoxClickHandler"/>

            <CheckBox
                android:id="@+id/checkBoxNumbers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numbers" android:checked="true" android:onClick="checkBoxClickHandler"/>

            <CheckBox
                android:id="@+id/checkBoxSpecialChar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_chars" android:onClick="checkBoxClickHandler"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="10dp"
                android:orientation="vertical" >
            </LinearLayout>

            <EditText
                android:id="@+id/editTextRegEx"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10" android:text="[a-zA-Z0-9]"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:orientation="vertical" >

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/buttonGenerate"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/generate" android:onClick="generateClickHandler"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>